//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  profileImage String
  email String [unique, not null]
  password String [not null]
  bio String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  posts Post [not null]
  comments Comment [not null]
  likes Like [not null]
  followers Follow [not null]
  following Follow [not null]
  role String [not null, default: 'user']
  sentMessages Message [not null]
  receivedMessages Message [not null]
}

Table Post {
  id Int [pk, increment]
  content String [not null]
  imageUrl String
  createdAt DateTime [default: `now()`, not null]
  author User [not null]
  authorId Int [not null]
  comments Comment [not null]
  likes Like [not null]
}

Table Comment {
  id Int [pk, increment]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  author User [not null]
  authorId Int [not null]
  post Post [not null]
  postId Int [not null]
}

Table Like {
  id Int [pk, increment]
  user User [not null]
  userId Int [not null]
  post Post [not null]
  postId Int [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (userId, postId) [unique]
  }
}

Table Follow {
  id Int [pk, increment]
  follower User [not null]
  followerId Int [not null]
  following User [not null]
  followingId Int [not null]

  indexes {
    (followerId, followingId) [unique]
  }
}

Table Message {
  id Int [pk, increment]
  senderId Int [not null]
  receiverId Int [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  readAt DateTime
  sender User [not null]
  receiver User [not null]
}

Ref: Post.authorId > User.id

Ref: Comment.authorId > User.id [delete: Cascade]

Ref: Comment.postId > Post.id [delete: Cascade]

Ref: Like.userId > User.id [delete: Cascade]

Ref: Like.postId > Post.id [delete: Cascade]

Ref: Follow.followerId > User.id

Ref: Follow.followingId > User.id

Ref: Message.senderId > User.id

Ref: Message.receiverId > User.id